@@ -8,27 +8,37 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.nio.file.*;
+import java.util.Optional;
 import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
 public class LocalStorageService {
 
-    @Value("${app.upload.root:uploads}")
-    private String root;
+    private static final String BASE_DIR = "C:/UploadImg"; // ✅ đường dẫn thật
+    private static final String BASE_URL = "/images";       // ✅ trỏ đúng với WebConfig
 
     public String saveReviewImage(Long reviewId, MultipartFile file) throws IOException {
-        String ext = StringUtils.getFilenameExtension(file.getOriginalFilename());
-        if (ext == null) ext = "jpg";
-        String safe = UUID.randomUUID().toString().replace("-", "") + "." + ext.toLowerCase();
+        if (file.isEmpty() || !file.getContentType().startsWith("image/")) {
+            throw new IllegalArgumentException("Invalid image file");
+        }
 
-        Path dir = Path.of(root, "reviews", String.valueOf(reviewId));
+        String ext = Optional.ofNullable(file.getOriginalFilename())
+                .filter(n -> n.contains("."))
+                .map(n -> n.substring(n.lastIndexOf(".")))
+                .orElse(".jpg");
+
+        String filename = UUID.randomUUID().toString().replace("-", "") + ext;
+
+        // Thư mục: C:/UploadImg/reviews/{reviewId}/
+        Path dir = Paths.get(BASE_DIR, "reviews", reviewId.toString());
         Files.createDirectories(dir);
-        Path target = dir.resolve(safe);
-        Files.copy(file.getInputStream(), target, StandardCopyOption.REPLACE_EXISTING);
 
-        // Static mapping: /uploads/** -> file system ./uploads/**
-        return "/uploads/reviews/" + reviewId + "/" + safe;
+        Path dest = dir.resolve(filename);
+        Files.copy(file.getInputStream(), dest, StandardCopyOption.REPLACE_EXISTING);
+
+        // ✅ URL public
+        return BASE_URL + "/reviews/" + reviewId + "/" + filename;
     }
 }
 
